// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en 1`] = `
<Layout
  lang="en"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="en"
    meta={Array []}
    title="Blog | Smart Contract Programmer"
  />
  <Segment>
    <Tab
      defaultActiveIndex={0}
      grid={
        Object {
          "paneWidth": 12,
          "tabWidth": 4,
        }
      }
      menu={
        Object {
          "secondary": true,
        }
      }
      panes={
        Array [
          Object {
            "menuItem": "English",
            "render": [Function],
          },
          Object {
            "menuItem": "Japanese",
            "render": [Function],
          },
        ]
      }
      renderActiveOnly={true}
    />
  </Segment>
</Layout>
`;

exports[`jp 1`] = `
<Layout
  lang="jp"
>
  <SEO
    description="Learn how to program smart contracts."
    keywords={
      Array [
        "smart contract",
        "solidity",
        "ethereum",
      ]
    }
    lang="jp"
    meta={Array []}
    title="ブログ | Smart Contract Programmer"
  />
  <Segment>
    <Tab
      defaultActiveIndex={1}
      grid={
        Object {
          "paneWidth": 12,
          "tabWidth": 4,
        }
      }
      menu={
        Object {
          "secondary": true,
        }
      }
      panes={
        Array [
          Object {
            "menuItem": "English",
            "render": [Function],
          },
          Object {
            "menuItem": "Japanese",
            "render": [Function],
          },
        ]
      }
      renderActiveOnly={true}
    />
  </Segment>
</Layout>
`;
